@@ -1,11 +1,14 @@
-package org.aria.imdbgraph.scrapper;
+package org.aria.imdbgraph.api.ratings.scrapper;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.stereotype.Service;
 import org.springframework.web.util.UriComponentsBuilder;
 
 import java.io.*;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
@@ -13,13 +16,12 @@ import java.nio.file.Path;
 import java.util.zip.GZIPInputStream;
 
 /**
- * Utility class whose responsibility is to download and formats files provided
- * by IMDB. All files will be downloaded into a data directory specified by the
- * property 'imdbgraph.data.directory' in the spring application.properties
- * file.
+ * Utility class used by {@link Scrapper} to download the latest data files from
+ * IMDB.
  * <p>
- * Documentation for file formats is available here: <a href="https://www.imdb.com/interfaces/">link</a>
+ * <a href="https://www.imdb.com/interfaces/">More info about file format</a>
  */
+@Service
 final class ImdbFileDownloader {
 
     private static final Logger logger = LogManager.getLogger();
@@ -27,14 +29,10 @@ final class ImdbFileDownloader {
 
     private final Path downloadDir;
 
-    ImdbFileDownloader(Path downloadDir) {
-        this.downloadDir = downloadDir;
+    ImdbFileDownloader(@Value("${imdbgraph.data.directory}") String downloadDirPath) {
+        this.downloadDir = Path.of(downloadDirPath);
     }
 
-    /**
-     * Enum to represent all the flat files provided by IMDB that need to be
-     * parsed and downloaded into the database.
-     */
     enum ImdbFile {
         TITLES_FILE("title.basics.tsv.gz"),
         EPISODES_FILE("title.episode.tsv.gz"),
@@ -47,22 +45,20 @@ final class ImdbFileDownloader {
         }
 
         /**
-         * Helper method to remove the .gz file extension from a file name.
+         * Remove .gz file extension from file name.
          */
         String getUnzippedFileName() {
             return fileName.substring(0, fileName.lastIndexOf('.'));
         }
 
-        /**
-         * Fetches the URL where the file can be downloaded.
-         */
         URL getDownloadUrl() {
-            String downloadURL = UriComponentsBuilder
+            URI downloadUri = UriComponentsBuilder
                     .fromUriString(BASE_DOWNLOAD_URL)
                     .pathSegment(fileName)
-                    .toUriString();
+                    .build()
+                    .toUri();
             try {
-                return new URL(downloadURL);
+                return downloadUri.toURL();
             } catch (MalformedURLException e) {
                 throw new UncheckedIOException(e);
             }
@@ -70,24 +66,13 @@ final class ImdbFileDownloader {
     }
 
     /**
-     * Downloads all the files from IMDB which contain the data needed to be
-     * parsed and loaded into the database.
-     * <p>
-     * NOTE: This method also unzips the file.
-     *
-     * @param fileToDownload The {@link ImdbFile} you want to download.
-     * @return If the method was able to download the file successfully, it
-     * returns its location.
-     * @throws UncheckedIOException If the download method encountered any IO
-     *                              errors and wasn't able to properly download
-     *                              all the files, a file loading error will be
-     *                              thrown.
+     * Downloads and unzips an IMDB data file and return the Path of the file if
+     * succesful.
      */
     Path download(ImdbFile fileToDownload) {
         URL downloadURL = fileToDownload.getDownloadUrl();
         File outputFile = downloadDir.resolve(fileToDownload.getUnzippedFileName()).toFile();
-        // Unzip files as well.
-        try (InputStream unzippedStream = new GZIPInputStream(downloadURL.openStream());
+        try (InputStream unzippedStream = new GZIPInputStream(downloadURL.openStream()); // Unzip
              ReadableByteChannel rbc = Channels.newChannel(unzippedStream);
              FileOutputStream fos = new FileOutputStream(outputFile)) {
             fos.getChannel().transferFrom(rbc, 0, Long.MAX_VALUE);
